--- a/application/api/composer.json
+++ b/application/api/composer.json
@@ -68,5 +68,8 @@
             "allow-contrib": false,
             "require": "6.2.*"
         }
+    },
+    "require-dev": {
+        "symfony/maker-bundle": "^1.48"
     }
 }
